--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>To Do Controller</title>
 		<script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-		<script src= "todoController.js"></script>
+		<script src= "Controller\todoController.js"></script>
 	</head>
 	<body ng-app="myApp" ng-controller="todoCtrl">
 		<h2>My Todo List</h2>
