--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>To Do Controller</title>
-		<script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+		<script src= "lib/angular.min.js"></script>
 		<script src= "Controller\todoController.js"></script>
 	</head>
 	<body ng-app="myApp" ng-controller="todoCtrl">
