--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 	<head>
 		<title>To Do Controller</title>
-		<script src= "lib/angular.min.js"></script>
+		<script src= "lib\angular.min.js"></script>
 		<script src= "Controller\todoController.js"></script>
 	</head>
 	<body ng-app="myApp" ng-controller="todoCtrl">
-		<h2>My Todo List</h2>
+		<h2>Todo List</h2>
 
 		<form ng-submit="todoAdd()">
-			<input type="text" ng-model="todoInput" size="50" placeholder="Add New">
+			<input type="text" ng-model="todoInput" size="70" placeholder="Add New">
 			<input type="submit" value="Add New">
 		</form>
 
